test/tests/stages/14_pointers/valid/casts/pointer_int_casts.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[254]:
  int
  identifier(i)
  =
  const int(128)
  ;
  long
  identifier(l)
  =
  const long(128l)
  ;
  int
  identifier(int_to_pointer)
  (
  void
  )
  {
  int
  *
  identifier(a)
  =
  (
  int
  *
  )
  identifier(i)
  ;
  int
  *
  identifier(b)
  =
  (
  int
  *
  )
  identifier(l)
  ;
  return
  identifier(a)
  ==
  identifier(b)
  ;
  }
  int
  identifier(pointer_to_int)
  (
  void
  )
  {
  static
  long
  identifier(l)
  ;
  long
  *
  identifier(ptr)
  =
  &
  identifier(l)
  ;
  unsigned
  long
  identifier(ptr_as_long)
  =
  (
  unsigned
  long
  )
  identifier(ptr)
  ;
  return
  (
  identifier(ptr_as_long)
  %
  const int(8)
  ==
  const int(0)
  )
  ;
  }
  int
  identifier(cast_long_round_trip)
  (
  void
  )
  {
  int
  *
  identifier(ptr)
  =
  (
  int
  *
  )
  identifier(l)
  ;
  long
  identifier(l2)
  =
  (
  long
  )
  identifier(ptr)
  ;
  return
  (
  identifier(l)
  ==
  identifier(l2)
  )
  ;
  }
  int
  identifier(cast_ulong_round_trip)
  (
  void
  )
  {
  long
  *
  identifier(ptr)
  =
  &
  identifier(l)
  ;
  unsigned
  long
  identifier(ptr_as_ulong)
  =
  (
  unsigned
  long
  )
  identifier(ptr)
  ;
  long
  *
  identifier(ptr2)
  =
  (
  long
  *
  )
  identifier(ptr_as_ulong)
  ;
  return
  (
  identifier(ptr)
  ==
  identifier(ptr2)
  )
  ;
  }
  int
  identifier(cast_int_round_trip)
  (
  void
  )
  {
  double
  *
  identifier(a)
  =
  (
  double
  *
  )
  identifier(i)
  ;
  int
  identifier(i2)
  =
  (
  int
  )
  identifier(a)
  ;
  return
  (
  identifier(i2)
  ==
  const int(128)
  )
  ;
  }
  int
  identifier(main)
  (
  void
  )
  {
  if
  (
  !
  identifier(int_to_pointer)
  (
  )
  )
  {
  return
  const int(1)
  ;
  }
  if
  (
  !
  identifier(pointer_to_int)
  (
  )
  )
  {
  return
  const int(2)
  ;
  }
  if
  (
  !
  identifier(cast_long_round_trip)
  (
  )
  )
  {
  return
  const int(3)
  ;
  }
  if
  (
  !
  identifier(cast_ulong_round_trip)
  (
  )
  )
  {
  return
  const int(4)
  ;
  }
  if
  (
  !
  identifier(cast_int_round_trip)
  (
  )
  )
  {
  return
  const int(5)
  ;
  }
  return
  const int(0)
  ;
  }
