test/tests/stages/14_pointers/invalid_types/invalid_pointer_initializer.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[16]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  *
  identifier(ptr)
  =
  const unsigned long(140732898195768ul)
  ;
  return
  const int(0)
  ;
  }
